// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFlipContainer Should animate if shouldAnimate is a function that returns true 1`] = `
<Wrapper
  shouldAnimate={[Function]}
>
  <ReactFlipContainer
    defer={false}
    forceDefer={false}
    shouldAnimate={[Function]}
  >
    <div>
      <ReactFlipElement
        opened={true}
      >
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_animation",
            }
          }
          opened={true}
        >
          <div>
            Element
          </div>
        </Component>
      </ReactFlipElement>
    </div>
  </ReactFlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should animate if shouldAnimate is true 1`] = `
<Wrapper
  shouldAnimate={true}
>
  <ReactFlipContainer
    defer={false}
    forceDefer={false}
    shouldAnimate={true}
  >
    <div>
      <ReactFlipElement
        opened={true}
      >
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_animation",
            }
          }
          opened={true}
        >
          <div>
            Element
          </div>
        </Component>
      </ReactFlipElement>
    </div>
  </ReactFlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should not animate if shouldAnimate is a function that returns false 1`] = `
<Wrapper
  shouldAnimate={[Function]}
>
  <ReactFlipContainer
    defer={false}
    forceDefer={false}
    shouldAnimate={[Function]}
  >
    <div>
      <ReactFlipElement
        opened={true}
      >
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_static",
            }
          }
          opened={true}
        >
          <div>
            Element
          </div>
        </Component>
      </ReactFlipElement>
    </div>
  </ReactFlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should not animate if shouldAnimate is false 1`] = `
<Wrapper
  shouldAnimate={false}
>
  <ReactFlipContainer
    defer={false}
    forceDefer={false}
    shouldAnimate={false}
  >
    <div>
      <ReactFlipElement
        opened={true}
      >
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_static",
            }
          }
          opened={true}
        >
          <div>
            Element
          </div>
        </Component>
      </ReactFlipElement>
    </div>
  </ReactFlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should render as animating if play returned a promise 1`] = `
<Wrapper>
  <ReactFlipContainer
    defer={false}
    forceDefer={false}
  >
    <div>
      <ReactFlipElement
        opened={true}
      >
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_animation",
            }
          }
          opened={true}
        >
          <div>
            Element
          </div>
        </Component>
      </ReactFlipElement>
    </div>
  </ReactFlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should render back as static if the play promise was resolved 1`] = `
<Wrapper>
  <ReactFlipContainer
    defer={false}
    forceDefer={false}
  >
    <div>
      <ReactFlipElement
        opened={true}
      >
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_static",
            }
          }
          opened={true}
        >
          <div>
            Element
          </div>
        </Component>
      </ReactFlipElement>
    </div>
  </ReactFlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer The container should render its children 1`] = `
<div>
  Content
</div>
`;
